fixed padding on copy wrap of project description

--- a/src/components/_project/project-description.module.scss
+++ b/src/components/_project/project-description.module.scss
@@ -19,9 +19,12 @@
       }
     }
   }
-}
+  .Content {
+    max-width: 1200px;
+    margin: 0px auto;
+  }
 
-.Content {
-  max-width: 1200px;
-  margin: 60px auto;
+  .copyWrap {
+    padding: 50px 0px;
+  }
 }
